fix form widths on mobile screens

--- a/managementapp/static/css/style.css
+++ b/managementapp/static/css/style.css
@@ -1,5 +1,3 @@
-/* app/static/css/style.css */
-
 body, html {
     width: 100%;
     height: 100%;
@@ -121,4 +119,11 @@ p.copyright {
 .inner {
     margin-left: auto;
     margin-right: auto;
+}
+
+@media only screen and (max-width: 600px)
+{
+    div.six.wide.column {
+        width: 70% !important;
+    }
 }
